--- a/.github/workflows/DeployToVPS.yml
+++ b/.github/workflows/DeployToVPS.yml
@@ -11,5 +11,12 @@ jobs:
     runs-on: self-hosted
     
     steps:
-    - name: IsThisWorking2
-      run: hostnamectl
+    - uses: actions/checkout@v3
+    - name: Set Up JDK 8
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+        cache: maven
+      - name: Build
+       rune: mvn -B package --file pom.xml
