--- a/.github/workflows/DeployToVPS.yml
+++ b/.github/workflows/DeployToVPS.yml
@@ -11,15 +11,12 @@ jobs:
     runs-on: self-hosted
     
     steps:
-     -uses: actions/checkout@v3
-     -name: Set Up JDK 8
+    - uses: actions/checkout@v3
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
-    
-       -name: environment variable
-        run: set SECRET=testSecret
-       -name: Build
-        run: mvn -B package --file pom.xml
+    - name: Build with maven
+      run: mvn -B package --file pom.xml
