--- a/.github/workflows/DeployToVPS.yml
+++ b/.github/workflows/DeployToVPS.yml
@@ -20,3 +20,7 @@ jobs:
         cache: maven
     - name: Build with maven
       run: mvn -B package --file pom.xml
+    - name: Copy jar
+      run: cp target/DevopsSpring-0.0.1-SNAPSHOT.jar ~/www/spring02/DevopsSpring-0.0.1-SNAPSHOT.jar
+    - name: restart
+      run: sudo systemctl restart spring02
